--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.26",
+    "expo-font": "~13.0.3",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "twrnc": "^4.6.0",
-    "expo-font": "~13.0.3",
-    "expo-splash-screen": "~0.29.21"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
+    "twrnc": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
